Fixed navbar z-index over about section

--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -17,6 +17,7 @@
 header {
     height: 60px;
     width: 100%;
+    z-index: 4;
     padding: 0px;
     display: flex;
     justify-content: space-between;
